# BezierRaytracing

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_and_run_as_docker.bat  build_and_run_as_docker.sh
integration_tests/: CMakeLists.txt  scene_setup.cpp  scene_setup.h  test_integration.cpp  test_multiple_surfaces_scene.cpp
integration_tests/expected/: test_curved_patch.ppm  test_curved_patch_subdivision.ppm  test_planar_patch.ppm  test_planar_patch_diagonal.ppm  test_scene.ppm  test_sphere_patch.ppm  test_splitted_plane_scene.ppm  test_teapot.ppm  test_twisted_patch.ppm
source_code/: CMakeLists.txt
source_code/file_io/: file_io.cpp  file_io.h
source_code/geometry/algorithms/: bilinear_patch_intersection.cpp  bilinear_patch_intersection.h  intersection.cpp  intersection.h  quasi_interpolation.cpp  quasi_interpolation.h
source_code/geometry/linear_algebra/: formulas.cpp  formulas.h
source_code/geometry/types/: bezier.cpp  bezier.h  bezier_curve.cpp  bezier_curve.h  bezier_surface.cpp  bezier_surface.h  matrix.cpp  matrix.h  mesh.h  varmesh.cpp  varmesh.h  vector.h
source_code/graphics/: graphics_formulas.cpp  graphics_formulas.h  screen_geometry.cpp  screen_geometry.h
source_code/raytracing/: nurbs_raytracing.cpp  nurbs_raytracing.h  raytrace_facetted_mesh.cpp  raytrace_facetted_mesh.h  raytrace_mesh_through_quasi_interpolation.cpp  raytrace_mesh_through_quasi_interpolation.h  raytrace_subdivided_mesh.cpp  raytrace_subdivided_mesh.h  scene_descriptor.cpp  scene_descriptor.h  synciterator.cpp  synciterator.h
unit_tests/: CMakeLists.txt  test_main.cpp  test_nurbs_raytracing.cpp  test_screen_geometry.cpp  test_vector.cpp
